--- a/src/allmydata/web/helper.xhtml
+++ b/src/allmydata/web/helper.xhtml
@@ -1,4 +1,4 @@
-<html xmlns:n="http://nevow.com/ns/nevow/0.1">
+<html xmlns:t="http://twistedmatrix.com/ns/twisted.web.template/0.1">
   <head>
     <title>Tahoe-LAFS - Helper Status</title>
     <link href="/tahoe.css" rel="stylesheet" type="text/css"/>
@@ -6,26 +6,22 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   </head>
   <body>
-
-<h1>Helper Status</h1>
-
-<h2>Immutable Uploads</h2>
-<ul n:data="helper_stats">
-  <li>Active: <span n:render="active_uploads" /></li>
-  <li>--</li>
-  <li>Bytes Fetched: <span n:render="upload_bytes_fetched" /></li>
-  <li>Incoming: <span n:render="incoming" /></li>
-  <li>Encoding: <span n:render="encoding" /></li>
-  <li>Bytes Encoded: <span n:render="upload_bytes_encoded" /></li>
-  <li>--</li>
-  <li>Total Requests: <span n:render="upload_requests" /></li>
-  <ul>
-    <li>Already Present: <span n:render="upload_already_present" /></li>
-    <li>Need Upload: <span n:render="upload_need_upload" /></li>
-  </ul>
-</ul>
-
-<div>Return to the <a href="/">Welcome Page</a></div>
-
+    <h1>Helper Status</h1>
+    <h2>Immutable Uploads</h2>
+    <ul t:data="helper_stats">
+      <li>Active: <span t:render="active_uploads" /></li>
+      <li>--</li>
+      <li>Bytes Fetched: <span t:render="upload_bytes_fetched" /></li>
+      <li>Incoming: <span t:render="incoming" /></li>
+      <li>Encoding: <span t:render="encoding" /></li>
+      <li>Bytes Encoded: <span t:render="upload_bytes_encoded" /></li>
+      <li>--</li>
+      <li>Total Requests: <span t:render="upload_requests" /></li>
+      <ul>
+        <li>Already Present: <span t:render="upload_already_present" /></li>
+        <li>Need Upload: <span t:render="upload_need_upload" /></li>
+      </ul>
+    </ul>
+    <div>Return to the <a href="/">Welcome Page</a></div>
   </body>
 </html>
