--- a/src/allmydata/web/upload-results.xhtml
+++ b/src/allmydata/web/upload-results.xhtml
@@ -1,4 +1,4 @@
-<html xmlns:n="http://nevow.com/ns/nevow/0.1">
+<html xmlns:t="http://twistedmatrix.com/ns/twisted.web.template/0.1">
   <head>
     <title>Tahoe-LAFS - File Uploaded</title>
     <link href="/tahoe.css" rel="stylesheet" type="text/css"/>
@@ -7,37 +7,37 @@
   </head>
   <body>
 
-<h1>Uploading File... <span n:render="string" n:data="done" /></h1>
+<h1>Uploading File... <span t:render="done" /></h1>
 
 <h2>Upload Results:</h2>
 <ul>
-  <li>URI: <tt><span n:render="string" n:data="uri" /></tt></li>
-  <li>Download link: <span n:render="download_link" /></li>
-  <li>Sharemap: <span n:render="sharemap" /></li>
-  <li>Servermap: <span n:render="servermap" /></li>
+  <li>URI: <tt><span><t:transparent t:render="uri" /></span></tt></li>
+  <li>Download link: <span t:render="download_link" /></li>
+  <li>Sharemap: <span t:render="sharemap" /></li>
+  <li>Servermap: <span t:render="servermap" /></li>
   <li>Timings:</li>
   <ul>
-    <li>File Size: <span n:render="string" n:data="file_size" /> bytes</li>
-    <li>Total: <span n:render="time" n:data="time_total" />
-     (<span n:render="rate" n:data="rate_total" />)</li>
+    <li>File Size: <span t:render="file_size" /> bytes</li>
+    <li>Total: <span t:render="time_total" />
+     (<span t:render="rate_total" />)</li>
     <ul>
-      <li>Storage Index: <span n:render="time" n:data="time_storage_index" />
-     (<span n:render="rate" n:data="rate_storage_index" />)</li>
-      <li>[Contacting Helper]: <span n:render="time" n:data="time_contacting_helper" /></li>
-      <li>[Upload Ciphertext To Helper]: <span n:render="time" n:data="time_cumulative_fetch" />
-     (<span n:render="rate" n:data="rate_ciphertext_fetch" />)</li>
+      <li>Storage Index: <span t:render="time_storage_index" />
+     (<span t:render="rate_storage_index" />)</li>
+      <li>[Contacting Helper]: <span t:render="time_contacting_helper" /></li>
+      <li>[Upload Ciphertext To Helper]: <span t:render="time_cumulative_fetch" />
+     (<span t:render="rate_ciphertext_fetch" />)</li>
 
-      <li>Peer Selection: <span n:render="time" n:data="time_peer_selection" /></li>
-      <li>Encode And Push: <span n:render="time" n:data="time_total_encode_and_push" />
-        (<span n:render="rate" n:data="rate_encode_and_push" />)</li>
+      <li>Peer Selection: <span t:render="time_peer_selection" /></li>
+      <li>Encode And Push: <span t:render="time_total_encode_and_push" />
+        (<span t:render="rate_encode_and_push" />)</li>
       <ul>
-        <li>Cumulative Encoding: <span n:render="time" n:data="time_cumulative_encoding" />
-        (<span n:render="rate" n:data="rate_encode" />)</li>
-        <li>Cumulative Pushing: <span n:render="time" n:data="time_cumulative_sending" />
-        (<span n:render="rate" n:data="rate_push" />)</li>
-        <li>Send Hashes And Close: <span n:render="time" n:data="time_hashes_and_close" /></li>
+        <li>Cumulative Encoding: <span t:render="time_cumulative_encoding" />
+        (<span t:render="rate_encode" />)</li>
+        <li>Cumulative Pushing: <span t:render="time_cumulative_sending" />
+        (<span t:render="rate_push" />)</li>
+        <li>Send Hashes And Close: <span t:render="time_hashes_and_close" /></li>
       </ul>
-      <li>[Helper Total]: <span n:render="time" n:data="time_helper_total" /></li>
+      <li>[Helper Total]: <span t:render="time_helper_total" /></li>
     </ul>
   </ul>
 </ul>
