--- a/src/allmydata/web/helper.xhtml
+++ b/src/allmydata/web/helper.xhtml
@@ -12,18 +12,18 @@
       <h1>Helper Status</h1>
 
       <h2>Immutable Uploads</h2>
-      <ul t:data="helper_stats">
-        <li>Active: <span t:render="active_uploads" /></li>
+      <ul t:render="helper_stats">
+        <li>Active: <t:slot name="active_uploads" /></li>
         <li>--</li>
-        <li>Bytes Fetched: <span t:render="upload_bytes_fetched" /></li>
-        <li>Incoming: <span t:render="incoming" /></li>
-        <li>Encoding: <span t:render="encoding" /></li>
-        <li>Bytes Encoded: <span t:render="upload_bytes_encoded" /></li>
+        <li>Bytes Fetched: <t:slot name="upload_bytes_fetched" /></li>
+        <li>Incoming: <t:slot name="incoming" /></li>
+        <li>Encoding: <t:slot name="encoding" /></li>
+        <li>Bytes Encoded: <t:slot name="upload_bytes_encoded" /></li>
         <li>--</li>
-        <li>Total Requests: <span t:render="upload_requests" /></li>
+        <li>Total Requests: <t:slot name="upload_requests" /></li>
         <ul>
-          <li>Already Present: <span t:render="upload_already_present" /></li>
-          <li>Need Upload: <span t:render="upload_need_upload" /></li>
+          <li>Already Present: <t:slot name="upload_already_present" /></li>
+          <li>Need Upload: <t:slot name="upload_need_upload" /></li>
         </ul>
       </ul>
 
